css/feed.css
#feed-list {
	list-style-type: none;
	margin: 0px;
}

.feed-item {
  background-color: #fafafa;
}

.feed-item-name {
  display: inline-block;
  width: 75%;
}

.feed-item-date {
  float: right;
}

.feed-item-contents {
  display: block;
  padding : 10px;
    position: relative;
  margin-top : 5px;
}

.feed-comment {
  background-color : #efefef;
}

#commentBtnTpl {
  display: none;
}

.commentBtn {
    margin-top: 8px;
}

#commentsTpl {
    display: none;
}

.comments {
    background-color: white;
    margin-top: 10px;
}

.comment {
    padding: 10px;
}

.smallLink {
    font-size: 10px;
    padding-left: 5px;
}

.xout {
    padding-left: 10px;
}

.feed-item .icon {
  height: 10px;
  width: 10px;
  float: left;
  margin: 4px 5px;
  background-image: url("../img/fb-icons.png");
}

.typeEntry .icon{
    background-position: 0px -67px;
}

.typeMilestone .icon{
    background-position: 11px -2px;
}

.typeJournal .icon{
    background-position: 0px -133px;
}

.typeMeeting .icon{
    background-position: 0px -123px;
}

.typeRequest .icon{
    background-position: 0px -101px;
}

